--- a/readme.html
+++ b/readme.html
@@ -1,1 +1,10 @@
-<h1> Readme </h1>
+Este é meu blog pessoal, parte integrante do meu portfólio virtual.
+
+Notas sobre o desenvolvimento:
+ - Desenvolvido com wordpress.
+
+Notas sobre a publicação:
+ - A data prevista para publicação é o final do ano 2015.
+
+Notas sobre versão:
+ - Versão atual: 0.0.1
