adicionar ao readme

--- a/readme.html
+++ b/readme.html
@@ -2,6 +2,7 @@ Este é meu blog pessoal, parte integrante do meu portfólio virtual.
 
 Notas sobre o desenvolvimento:
  - Desenvolvido com wordpress.
+ - Banco de dados Mysql
 
 Notas sobre a publicação:
  - A data prevista para publicação é o final do ano 2015.
